--- a/app/views/app_admin/users/index.html.haml
+++ b/app/views/app_admin/users/index.html.haml
@@ -14,35 +14,34 @@
       %i.fa.fa-plus
       New user for existing person
 
+.well.pull-right
+
+  = form_tag app_admin_users_path, method: 'GET', class: 'form-inline' do
+
+    .form-group
+      = text_field :filter, :fuzzy_search, class: "search-query, form-control", 
+          placeholder: 'Search term',  value: params.try(:[],:filter).try(:[],:fuzzy_search)
+
+    .form-group
+      %label Sort by:
+      %select.form-control{name: :sort_by}
+        = options_for_select [["Last-, first-name", :last_name_first_name],["Login ascending", :login], ["Amount of resources", :resources_amount]], @sort_by
+
+    .form-group
+      = button_tag type: 'submit', class: 'btn btn-sm' do
+        %i.fa.fa-filter
+        Apply
+
+
+
 .row
 
-  %div.col-md-3
-
-    %h3 
-      %i.fa.fa-filter
-      Filters
-
-    = form_tag app_admin_users_path, method: 'GET' do
-
-      .form-group
-        = text_field :filter, :fuzzy_search, class: "search-query, form-control", value: params.try(:[],:filter).try(:[],:fuzzy_search)
-
-      .form-group
-        %label Sort by:
-        %select.form-control{name: :sort_by}
-          = options_for_select [["Login ascending", :login], ["Amount of resources", :resources_amount]], @sort_by
-
-      .form-group
-        = button_tag type: 'submit', class: 'btn btn-sm' do
-          Filter
-
-  .col-md-9
+  .col-md-12
     %table.table.table-striped
       %thead
         %tr
           %th Login
           %th E-mail
-          %th id
           %th Person
           %th # of resources
       %tbody
