Temporary rescue from git gem when it throws unexpected errors

--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -17,7 +17,8 @@
       %a.weak{href: "https://github.com/zhdk/madek/commit/#{CurrentCommit.get}", style: "font-family: monospace"}
         #{CurrentCommit.get.to_s[0..5]} 
       vom 
-      = l CurrentCommit.get.committer_date, format: :short
+      -#  TODO remove rescue; it was added because there seems a bug with the git gem and ruby 2.1.0
+      = l CurrentCommit.get.committer_date, format: :short rescue "Unknown"
 
 - if clipboard
   = render "application/clipboard" unless current_user.is_guest?
