Added statistics item in admin interface
which was unintentionally removed during merge

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -22,6 +22,10 @@
               %i.fa.fa-dashboard
               Dashboard 
           %li
+            = link_to app_admin_statistics_path do
+              %i.fa.fa-bar-chart-o
+              Info + Statistics
+          %li
             =link_to edit_app_admin_settings_path do
               %i.icon-cog
               Settings
