Extended text and trigram search for admin/users
Squashed commit of the following:

commit af4a4cacc7ae68ec6ba91438eeb4f104bc736514
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 10:13:20 2014 +0100

    Added test for extended admin / users search feature

commit 8fb1f1b61c348a8a440459028562a287efdf4132
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 10:05:25 2014 +0100

    Fix features

commit e1469e24d46a220389b7d457184362393fcd0547
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 10:01:31 2014 +0100

    Updated personas db and fixed feature

commit 8974f111e3cd0912a6499040e12bf14ddc581cfe
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 09:31:28 2014 +0100

    Refactored trgm search on admin / users for production

--- a/app/views/app_admin/users/index.html.haml
+++ b/app/views/app_admin/users/index.html.haml
@@ -1,9 +1,3 @@
-
-.alert.alert-warning
-  Search features are experimental. 
-
-  (Trigram should have trgm indexed searchable field)
-
 %h1.text-center 
   %i.fa.fa-user
   Users
@@ -25,24 +19,23 @@
   = form_tag app_admin_users_path, method: 'GET', class: 'form-inline' do
 
     .form-group
-      = text_field :filter, :fuzzy_search, class: "search-query, form-control", 
-          placeholder: 'Search term',  value: params.try(:[],:filter).try(:[],:fuzzy_search)
+      = text_field :filter, :search_terms, class: "search-query, form-control", 
+          placeholder: 'Search term',  value: params.try(:[],:filter).try(:[],:search_terms)
 
     .form-group
-      %label Sort by:
+      %label Sort (and search) by:
       %select.form-control{name: :sort_by}
         = options_for_select [["Last-, first-name", :last_name_first_name],
-          ["Trigram search ranking", :trgm_rank],
-          ["Text search ranking",:text_rank],
           ["Login ascending", :login], 
-          ["Amount of resources", :resources_amount]], @sort_by
+          ["Amount of resources", :resources_amount],
+          ["Text search ranking",:text_rank],
+          ["Trigram search ranking", :trgm_rank],
+          ], @sort_by
 
     .form-group
       = button_tag type: 'submit', class: 'btn btn-sm' do
         %i.fa.fa-filter
         Apply
-
-
 
 .row
 
