Extended text search on admin/people
Squashed commit of the following:

commit 5fc5d42b11041d919fa131e95315997bdc59cce3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 17:49:37 2014 +0100

    Revert to jsbrowser

commit 3359b85a48d098baddeb4f3a07d4f294996bd53b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 17:39:48 2014 +0100

    Feature test adjustments

commit 583858649c1458ee776b131db7cde7e44498de3a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 16:54:22 2014 +0100

    Migrated personas db

commit d3467de0fa73a30470aa03b5425fb34f93f99cc5
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 16:52:26 2014 +0100

    Fix and finish people text search

commit 9516223b21c997ef974c04dbe2cc837c5bd51c6f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 14:04:59 2014 +0100

    Wip searching on admin/people

commit a235bdec98dc70e6ea13bb271a8c396c0a162a9c
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 13:22:49 2014 +0100

    Wip searching on people

commit d917e12e53447e4a3daf93fafa81e84d7707a283
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 18 10:41:26 2014 +0100

    Added searchable field to people

--- a/app/views/app_admin/people/_person.html.haml
+++ b/app/views/app_admin/people/_person.html.haml
@@ -19,6 +19,8 @@
         %span.meta_data_count #{person.meta_data.count} 
         to ...
 
+  %td.search-rank= person.respond_to?(:search_rank) ?  person.search_rank : ''
+
   %td
     %ul.list-inline
       %li 
