--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -3,6 +3,33 @@
   Groups
 
 
+.well.pull-right
+  = form_tag app_admin_groups_path, method: 'GET', class: 'form-inline'  do
+
+    .form-group
+      = text_field :filter, :search_terms, class: "search-query, form-control", 
+          placeholder: 'Search term',  value: params.try(:[],:filter).try(:[],:search_terms)
+
+    .form-group
+      %label Sort (and search) by:
+      %select.form-control{name: :sort_by}
+        = options_for_select [["Name", :name],
+          ["Text search ranking",:text_rank],
+          ["Trigram search ranking", :trgm_rank],
+          ], @sort_by
+
+    .form-group
+      %label Type of
+      %select.form-control{name: :type}
+        = options_for_select [["All", :all], ["Group", :group], ["MetaDepartment", :meta_department]], @type
+
+    .form-group
+      = button_tag type: 'submit', class: 'btn btn-sm' do
+        %i.fa.fa-filter
+        Apply
+
+
+
 %ul.list-inline
 
   %li
@@ -12,25 +39,8 @@
 
 .row
 
-  %div.col-md-3
 
-    %h3 
-      %i.fa.fa-filter
-      Filters
-
-    = form_tag app_admin_groups_path, method: 'GET' do
-
-      %label 
-        = text_field nil, :fuzzy_search, class: "search-query", value: params[:fuzzy_search]
-      .form-group
-        %label Type of
-        %select.form-control{name: :type}
-          = options_for_select [["All", :all], ["Group", :group], ["MetaDepartment", :meta_department]], @type
-
-      = button_tag type: 'submit', class: 'btn btn-sm' do
-        Filter
-
-  .col-md-9
+  .col-md-12
     %table.table.table-striped
       %thead
         %tr
@@ -38,6 +48,7 @@
           %th Ldap name
           %th Type
           %th.no-wrap # Users
+          %th Search rank
           %th
       %tbody
         =render partial: 'group', collection: @groups
