--- a/app/views/media_entries/_tabs.html.haml
+++ b/app/views/media_entries/_tabs.html.haml
@@ -3,7 +3,7 @@
     %a{:href => media_entry_path(@media_entry)}= @main_context_group.name
   - if @media_entry.parents.accessible_by_user(current_user,:view).any?
     %li.ui-tabs-item{:class => media_entry_parents_page? ? "active" : ""}
-      %a{:href => parents_media_entry_path(@media_entry)} Übergeordnete Sets
+      %a.parent_sets{:href => parents_media_entry_path(@media_entry)} Übergeordnete Sets
 
   - @other_relevant_context_groups.each do |meta_context_group|
     %li.ui-tabs-item{:class => media_entry_context_group_page?(meta_context_group) ? "active" : ""}
