Fix show original search term in search results

--- a/app/views/search/result.html.haml
+++ b/app/views/search/result.html.haml
@@ -19,7 +19,7 @@
             .ui-body-title-label
               %h1.title-xl
                 = _("Search results for")
-                = "\"#{@term}\""
+                = "\"#{@terms}\""
 
       .col1of2
         - unless current_user.is_guest?
