--- a/app/views/media_entries/_actions.html.haml
+++ b/app/views/media_entries/_actions.html.haml
@@ -26,6 +26,8 @@
         -if @media_entry.user == current_user
           = render :partial => "media_resources/actions/visualize_my_component_with", :locals => {mr: @media_entry}
 
+        = render "media_resources/actions/urls", media_resource: @media_entry
+
         - if current_user.authorized?(:delete, @media_entry)
           = render :partial => "media_resources/actions/delete"
 
