Amdin MetaTerms feature
Squashed commit of the following:

commit 5b4ff7f03dab4df8f092983b2dc0a8e2a3733436
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Thu Feb 27 09:54:05 2014 +0100

    add meta terms section in admin panel

commit 88e00c7e7311c3bac88bd5f812adeb90ce3f7bc6
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Wed Jan 8 11:30:51 2014 +0100

    Admin can only create a new meta key

commit d392aa8754fb6ec44d1c68746a63f9a224021beb
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Wed Jan 8 09:27:47 2014 +0100

    Admin is able to add & edit meta keys

--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -66,7 +66,7 @@
             %ul.dropdown-menu
               %li
                 = link_to "Meta Keys", app_admin_meta_keys_path
-
+                = link_to "Meta Terms", app_admin_meta_terms_path
 
           %li.dropdown
             %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
