css: modals: add 'crucial' variation
(needed for 'usage_terms', bug [#44383943] )

--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -4,6 +4,7 @@
  * .narrow    - Narrow variation
  * .wide      - Wide variation
  * .extrawide - Extra-Wide variation
+ * .crucial   - Can be used instead of app-body and is scrollable
  *
  * Styleguide 6.10
 
@@ -59,6 +60,13 @@
   &:hover
     opacity: 1
     text-decoration: none
+
+// Crucial modals
+
+.ui-modal.crucial
+  position: relative
+  margin-top: 20px
+  margin-bottom: 20px
 
 // Size variations
 
