ui: custom_urls
delivers [#65885532]

Squashed commit of the following:

commit 5d9bd071eb4f901a80b7252aee6e8ff92bf2b538
Author: Max F. Albrecht <1@178.is>
Date:   Wed Mar 12 19:19:26 2014 +0100

    ui: custom_urls: make more consistency, also for 'confirm_transfer' dialog (conservative choice)

    part of [#65885532]

commit 64a1ee6615b43e65f65029192756b18b149bb131
Author: Max F. Albrecht <1@178.is>
Date:   Wed Mar 12 17:50:46 2014 +0100

    ui: custom_urls: fix the test

    part of [#65885532]

commit 0fd23c87f81e9213a2d92d879f4c781193d964f5
Author: Max F. Albrecht <1@178.is>
Date:   Tue Mar 11 20:14:30 2014 +0100

    ui: custom_urls: small typos

    part of [#65885532]

commit 26214964e37bf2b428e3a3848cf342e5baf94bbb
Author: Max F. Albrecht <1@178.is>
Date:   Tue Mar 11 17:53:21 2014 +0100

    ui: custom_urls: make more consistency, also for 'new' dialog (conservative choice)

    part of [#65885532]

commit 34c4e59d04699b92b62d37061589910f27329edf
Author: Max F. Albrecht <1@178.is>
Date:   Mon Mar 10 14:24:05 2014 +0100

    ui: custom_urls: make more consistent with permissions (wrap in page, reorder text)

    part of [#65885532]

commit 12ab44abfecf6255b43a59c75a54ec80ee328386
Author: Max F. Albrecht <1@178.is>
Date:   Mon Mar 10 12:57:03 2014 +0100

    ui: custom_urls: change wordings

    part of [#65885532]

--- a/app/views/custom_urls/_custom_url.html.haml
+++ b/app/views/custom_urls/_custom_url.html.haml
@@ -4,12 +4,12 @@
   %td= custom_url.creator.canonical_name
   %td
     - if custom_url.is_primary 
-      %strong Primäre URL
+      %strong Primäre Adresse
     - else
       Weiterleitung
   %td
     - if create_url_authorized?
       - unless custom_url.is_primary 
         = link_to set_primary_url_media_resource_path(@media_resource,custom_url), method: 'POST' do
-          %button.button Als primäre URL setzen
+          %button.button Als primäre Adresse setzen
 
