--- a/app/views/media_resources/actions/_urls.html.haml
+++ b/app/views/media_resources/actions/_urls.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
-  =link_to custom_urls_path(media_resource), id: "manage_custom_urls"  do
+  =link_to custom_urls_path(media_resource), id: "manage_custom_urls", title: "Adresse des Inhalts anlegen oder übertragen" do
     %i.fa.fa-link.mid
-    URLs 
+    Adressen verwalten 
