--- a/app/views/permissions/edit.html.haml
+++ b/app/views/permissions/edit.html.haml
@@ -1,3 +1,10 @@
+:ruby
+  # is the user allowed to transfer ALL selected resources?
+  all_can_be_transfered = @all_media_resources.count == @all_media_resources.accessible_by_user(current_user,:transfer).count
+  
+  # is the user allowed to manage ALL selected resource?
+  all_can_be_managed = @media_resources.accessible_by_user(current_user, :manage).count == @media_resources.count
+
 .app
 
   = render "application/header"
@@ -26,11 +33,13 @@
         - case @action
         - when :view
           .ui-body-title-actions
-            =link_to edit_responsibilities_path(params.slice(:media_resource_id,:collection_id).merge({_action: "edit"})), id: "transfer-responsibilities", class: "button" do
-              =_("Transfer responsibility")
-            =link_to edit_permissions_path(params.slice(:media_resource_id,:collection_id).merge({_action: "edit"})), id: "edit-permissions",data: {manageable: true}, class: "primary-button" do
-              =_("Manage permissions")
-
+            - if all_can_be_transfered
+              =link_to edit_responsibilities_path(params.slice(:media_resource_id,:collection_id).merge({_action: "edit"})), id: "transfer-responsibilities", class: "button" do
+                =_("Transfer responsibility")
+              
+            - if all_can_be_managed
+              =link_to edit_permissions_path(params.slice(:media_resource_id,:collection_id).merge({_action: "edit"})), id: "edit-permissions",data: {manageable: true}, class: "primary-button" do
+                =_("Manage permissions")
 
     .app-body-ui-container
 
